--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll --verbose"
+    "test": "jest --watchAll --verbose --coverage"
   },
   "author": "Ahmad & Mazen",
   "license": "ISC",
@@ -17,9 +17,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
     "nodemon": "^2.0.13",
+    "supertest": "^6.1.6",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "jest": "^27.3.1"
+    "jest": "^26.6.3"
   }
 }
