--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "jest": "^27.3.1"
+    "jest": "^27.3.1",
+    "jest-when": "^3.4.1"
   }
 }
