--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "jest": "^27.3.1",
-    "jest-when": "^3.4.1"
+    "jest-when": "^3.4.1",
+    "mockingoose": "^2.15.2"
   }
 }
