--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll --verbose --coverage"
+    "test": "jest --watchAll --verbose --coverage",
+    "start": "nodemon index.js"
   },
   "author": "Ahmad & Mazen",
   "license": "ISC",
@@ -12,17 +13,14 @@
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
     "express": "^4.17.1",
-    "express-validator": "^6.13.0",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
-    "nodemon": "^2.0.13",
-    "supertest": "^6.1.6",
-    "winston": "^3.3.3"
+    "nodemon": "^2.0.13"
   },
   "devDependencies": {
     "jest": "^27.3.1",
     "jest-when": "^3.4.1",
-    "mockingoose": "^2.15.2"
+    "supertest": "^6.1.6"
   }
 }
